webook/k8s-day01-deployment.yaml
#用来启动的配置
apiVersion: apps/v1
kind: Deployment
metadata:
  name: day01
spec:
#  副本数量
  replicas: 3
  selector:
    matchLabels:
      app: day01
#    描述pod是怎么样的
  template:
    metadata:
      labels:
        app: day01
#        pod具体信息
    spec:
      containers:
        - name: day01
          image: huahua/day01:v0.0.4
          ports:
            - containerPort: 8080
