webook/k8s-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
  labels:
    app: webook-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-mysql
  template:
    metadata:
      name: webook-mysql
      labels:
        app: webook-mysql
    spec:
      containers:
        - name: webook-mysql
          image: mysql:8.0.29
          imagePullPolicy: IfNotPresent
          # 挂载
          volumeMounts:
            # 这边一定要对应到mysql内部存储位置
            - mountPath: /var/lib/mysql
              # volumes的name
              name: mysql-storage
          ports:
            - containerPort: 3306
      restartPolicy: Always
      #存储mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            # 对应pvc文件的name
            claimName: webook-mysql-claim
