webook/k8s-webook-deployment.yaml
#用来启动的配置
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook
spec:
#  副本数量
  replicas: 3
  selector:
    matchLabels:
      app: webook
#    描述pod是怎么样的
  template:
    metadata:
      labels:
        app: webook
#        pod具体信息
    spec:
      containers:
        - name: webook
          image: huahua/webook:v0.0.1
          ports:
            - containerPort: 8080
