webook/k8s-webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook
spec:
  type: LoadBalancer
  selector:
    app: webook
  ports:
    - protocol: TCP
      # 外部访问的端口
      port: 8081
      # 转发到内部pod容器的8080端口
      targetPort: 8080
